--- a/index.html
+++ b/index.html
@@ -19,20 +19,59 @@
 
     <link rel="stylesheet" href="./style.css">
 
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-8P8VER0LG8"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8P8VER0LG8"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
-  gtag('config', 'G-8P8VER0LG8');
-</script>
+        gtag('config', 'G-8P8VER0LG8');
+    </script>
 
-<meta name="google-site-verification" content="6NNHAyzslowOZx_wXi6K7FRlzaqn-tVHoS--OV4QEEc" />
+    <meta name="google-site-verification" content="6NNHAyzslowOZx_wXi6K7FRlzaqn-tVHoS--OV4QEEc" />
 </head>
 
 <body>
+    <header class="header">
+        <div class="logo">KVC <span>Partners</span></div>
+        <nav class="nav">
+            <ul>
+                <li><a href="#">Top</a></li>
+                <li><a href="#">Loyalty</a></li>
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">Why KVC</a></li>
+                <li><a href="#">Team & Value</a></li>
+                <li><a href="#">Blog</a></li>
+            </ul>
+        </nav>
+        <div class="header-right">
+            <a href="#" class="analytics">Job change analytics</a>
+            <a href="#" class="reserve">Reserve</a>
+        </div>
+    </header>
 
+    <!-- 第一個區域 -->
+    <section class="main-section">
+        <h1 class="main-title">Think Outside<br>The Job Description</h1>
+        <p class="sub-text">"目から鱗"の選択肢を</p>
+    </section>
+
+    <!-- 第二個區域 -->
+    <section class="loyalty-section">
+        <div class="content-wrapper">
+            <h2 class="section-title">Loyalty</h2>
+            <div class="content-text">
+                <h3>KVCの求人選定基準</h3>
+                <ul>
+                    <li>人的資本に積極的に投資をしている企業の求人であること</li>
+                    <li>市場規模が大きく、資本が循環している業界の求人であること</li>
+                    <li>継続的な市場ニーズが見込めるスキルを身に付けられること</li>
+                </ul>
+                <p>ダイレクトリクルーティングでは本当にいい待遇求人や社内のリアルな情報は出てこないのが現実。</p>
+                <p>KVCの選定基準を満たした求人を集め続けた結果、年収が高い/高くなる求人が多く集まりました。</p>
+            </div>
+        </div>
+    </section>
     <!-- 頁尾 -->
     <footer>
         <div>
