--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <body>
     <header class="header">
-        <div class="logo">KVC <span>Partners</span></div>
+        <div class="logo"><img src="./img/logo.png" alt=""></div>
         <nav class="nav">
             <ul>
                 <li><a href="#">Top</a></li>
