--- a/index.html
+++ b/index.html
@@ -54,6 +54,45 @@
     <section class="main-section">
         <h1 class="main-title">Think Outside<br>The Job Description</h1>
         <p class="sub-text">"目から鱗"の選択肢を</p>
+        <!-- 動畫 -->
+        <div class="animation-container">
+            <div class="slide" id="challenge1">
+                <img src="./img/Challenges_one.png" alt="遇到困難">
+                <p>遇到困難</p>
+            </div>
+            <div class="slide" id="challenge2">
+                <img src="./img/Challenges_two.png" alt="內心掙扎">
+                <p>內心掙扎</p>
+            </div>
+            <div class="slide" id="megaphone">
+                <img src="./img/Megaphone.png" alt="發表需求">
+                <p>發表需求</p>
+            </div>
+            <div class="slide" id="discussion1">
+                <img src="./img/Discussion_one.png" alt="討論">
+                <p>討論</p>
+            </div>
+            <div class="slide" id="discussion2">
+                <img src="./img/Discussion_two.png" alt="協作">
+                <p>協作</p>
+            </div>
+            <div class="slide" id="brainstorming1">
+                <img src="./img/Brainstorming_one.png" alt="創意發想">
+                <p>創意發想</p>
+            </div>
+            <div class="slide" id="brainstorming2">
+                <img src="./img/Brainstorming_two.png" alt="深化創意">
+                <p>深化創意</p>
+            </div>
+            <div class="slide" id="teamwork">
+                <img src="./img/Teamwork.png" alt="共贏合作">
+                <p>共贏合作</p>
+            </div>
+            <div class="slide" id="recording">
+                <img src="./img/Recording.png" alt="記錄成果">
+                <p>記錄成果</p>
+            </div>
+        </div>
     </section>
 
     <!-- 第二個區域 -->
