--- a/index.html
+++ b/index.html
@@ -162,7 +162,19 @@
             </div>
         </div>
     </section>
-    
+
+    <!-- 聯絡我們 -->
+    <section id="contact" class="contact-section">
+        <div class="container">
+            <h2 class="section-title" data-aos="fade-up">聯絡我們</h2>
+            <form class="contact-form" action="your_backend_endpoint" method="post">
+                <input type="text" name="name" placeholder="姓名" required>
+                <input type="email" name="email" placeholder="電子郵件" required>
+                <textarea name="message" placeholder="需求描述" required></textarea>
+                <button type="submit" class="btn btn-primary">提交</button>
+            </form>
+        </div>
+    </section>
 
     <!-- 頁尾 -->
     <footer class="footer">
