--- a/index.html
+++ b/index.html
@@ -33,71 +33,64 @@
 
 <body>
     <header class="header">
-        <div class="logo"><img src="./img/logo.png" alt=""></div>
+        <div class="logo">
+            <img src="" alt="">
+        </div>
+        <hr>
         <nav class="nav">
             <ul>
-                <li><a href="#">Top</a></li>
-                <li><a href="#">Loyalty</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Why KVC</a></li>
-                <li><a href="#">Team & Value</a></li>
-                <li><a href="#">Blog</a></li>
+                <li><a href="#">關於我們</a></li>
+                <li><a href="#">服務項目</a></li>
+                <li><a href="#">收費標準</a></li>
+                <li><a href="#">成功案例</a></li>
+                <li><a href="#">聯絡我們</a></li>
             </ul>
         </nav>
-        <div class="header-right">
-            <a href="#" class="analytics">Job change analytics</a>
-            <a href="#" class="reserve">Reserve</a>
-        </div>
     </header>
-
-    <!-- 第一個區域 -->
-    <section class="main-section">
-        <h1 class="main-title">Think Outside<br>The Job Description</h1>
-        <p class="sub-text">"目から鱗"の選択肢を</p>
-        <!-- 動畫 -->
-        <div class="animation-container">
-            <div class="slide" id="challenge1">
-                <img src="./img/Challenges_one.png" alt="遇到困難">
-                <p>遇到困難</p>
-            </div>
-            <div class="slide" id="challenge2">
-                <img src="./img/Challenges_two.png" alt="內心掙扎">
-                <p>內心掙扎</p>
-            </div>
-            <div class="slide" id="megaphone">
-                <img src="./img/Megaphone.png" alt="發表需求">
-                <p>發表需求</p>
-            </div>
-            <div class="slide" id="discussion1">
-                <img src="./img/Discussion_one.png" alt="討論">
-                <p>討論</p>
-            </div>
-            <div class="slide" id="discussion2">
-                <img src="./img/Discussion_two.png" alt="協作">
-                <p>協作</p>
-            </div>
-            <div class="slide" id="brainstorming1">
-                <img src="./img/Brainstorming_one.png" alt="創意發想">
-                <p>創意發想</p>
-            </div>
-            <div class="slide" id="brainstorming2">
-                <img src="./img/Brainstorming_two.png" alt="深化創意">
-                <p>深化創意</p>
-            </div>
-            <div class="slide" id="teamwork">
-                <img src="./img/Teamwork.png" alt="共贏合作">
-                <p>共贏合作</p>
-            </div>
-            <div class="slide" id="recording">
-                <img src="./img/Recording.png" alt="記錄成果">
-                <p>記錄成果</p>
-            </div>
-        </div>
-    </section>
 
     <!-- Hero Section區域 -->
     <section class="hero-section">
-        <div class="hero-content" data-aos="fade-up">
+                <!-- 動畫 -->
+                <div class="animation-container">
+                    <div class="slide" id="challenge1">
+                        <img src="./img/Challenges_one.png" alt="遇到困難">
+                        <p>遇到困難</p>
+                    </div>
+                    <div class="slide" id="challenge2">
+                        <img src="./img/Challenges_two.png" alt="內心掙扎">
+                        <p>內心掙扎</p>
+                    </div>
+                    <div class="slide" id="megaphone">
+                        <img src="./img/Megaphone.png" alt="發表需求">
+                        <p>發表需求</p>
+                    </div>
+                    <div class="slide" id="discussion1">
+                        <img src="./img/Discussion_one.png" alt="討論">
+                        <p>討論</p>
+                    </div>
+                    <div class="slide" id="discussion2">
+                        <img src="./img/Discussion_two.png" alt="協作">
+                        <p>協作</p>
+                    </div>
+                    <div class="slide" id="brainstorming1">
+                        <img src="./img/Brainstorming_one.png" alt="創意發想">
+                        <p>創意發想</p>
+                    </div>
+                    <div class="slide" id="brainstorming2">
+                        <img src="./img/Brainstorming_two.png" alt="深化創意">
+                        <p>深化創意</p>
+                    </div>
+                    <div class="slide" id="teamwork">
+                        <img src="./img/Teamwork.png" alt="共贏合作">
+                        <p>共贏合作</p>
+                    </div>
+                    <div class="slide" id="recording">
+                        <img src="./img/Recording.png" alt="記錄成果">
+                        <p>記錄成果</p>
+                    </div>
+                </div>
+        
+        <div class="hero-content" >
             <h1>讓品牌脫穎而出，在市場中更具競爭力！</h1>
             <p>結合數據分析、創意影音與精準策略，為您打造最有效的行銷方案。</p>
             <a href="#services" class="btn btn-primary">了解更多</a>
