--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
             </div>
             <hr>
             <ul>
-                <li><a href="" data-st-target="hero-section" data-st-duration="300">關於我們</a></li>
-                <li><a href="" data-st-target="services" data-st-duration="300">服務項目</a></li>
-                <li><a href="" data-st-target="pricing" data-st-duration="300">收費標準</a></li>
-                <li><a href="" data-st-target="portfolio" data-st-duration="300">成功案例</a></li>
-                <li><a href="" data-st-target="contact" data-st-duration="300">聯絡我們</a></li>
+                <li><a href="#hero" >關於我們</a></li>
+                <li><a href="#services" >服務項目</a></li>
+                <li><a href="#pricing" >收費標準</a></li>
+                <li><a href="#portfolio" >成功案例</a></li>
+                <li><a href="#contact" >聯絡我們</a></li>
             </ul>
         </nav>
     </header>
@@ -181,9 +181,6 @@
         </div>
     </footer>
 
-
-    <!-- data-st-top 箭頭要出現的高度 -->
-    <!-- data-st-time 特效的持續時間 -->
     <a id="arrow" data-st-target="top" data-st-duration="8000" data-st-top="300" data-st-time="1000"></a>
 
 
