--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
     <header class="header">
         <nav class="nav">
             <div class="logo">
-                <a href=".header"><img src="./img/LOGO06.png" alt=""></a>
+                <a href="#hero"><img src="./img/LOGO06.png" alt=""></a>
             </div>
             <hr>
             <ul>
-                <li><a href="#hero" >關於我們</a></li>
+                <li><a href="#" >關於我們</a></li>
                 <li><a href="#services" >服務項目</a></li>
                 <li><a href="#pricing" >收費標準</a></li>
                 <li><a href="#portfolio" >成功案例</a></li>
