--- a/index.html
+++ b/index.html
@@ -181,7 +181,8 @@
         </div>
     </footer>
 
-    <a id="arrow" data-st-target="top" data-st-duration="8000" data-st-top="300" data-st-time="1000"></a>
+    <!-- 置頂按鈕 -->
+    <!-- <a id="arrow" data-st-target="top" data-st-duration="8000" data-st-top="300" data-st-time="1000"></a> -->
 
 
     <!-- AOS CDN -->
