--- a/index.html
+++ b/index.html
@@ -97,6 +97,20 @@
         </div>
     </section>
 
+    <!-- About Section區域 -->
+    <section id="about" class="about-section">
+        <div class="container">
+            <div class="about-content" data-aos="fade-up">
+                <h2 class="section-title">關於我們</h2>
+                <p class="about-text">
+                    兔嘲媒專注於協助品牌在競爭激烈的市場中脫穎而出，通過數據分析、創意影音製作和精準的策略規劃，
+                    為您量身打造行銷方案。從品牌建立到影響擴散，我們全程相伴，創造非凡價值。
+                </p>
+                <a href="#services" class="btn btn-secondary">探索我們的服務</a>
+            </div>
+        </div>
+    </section>
+
     <!-- Our Services區域 -->
     <section id="services" class="services-section">
         <div class="container">
