--- a/index.html
+++ b/index.html
@@ -100,13 +100,27 @@
     <!-- About Section區域 -->
     <section id="about" class="about-section">
         <div class="container">
-            <div class="about-content" data-aos="fade-up">
-                <h2 class="section-title">關於我們</h2>
-                <p class="about-text">
-                    兔嘲媒專注於協助品牌在競爭激烈的市場中脫穎而出，通過數據分析、創意影音製作和精準的策略規劃，
-                    為您量身打造行銷方案。從品牌建立到影響擴散，我們全程相伴，創造非凡價值。
-                </p>
-                <a href="#services" class="btn btn-secondary">探索我們的服務</a>
+            <h2 class="section-title">關於我們</h2>
+            <div class="about-content">
+                <!-- 左側介紹區域 -->
+                <div class="about-intro">
+                    <h3>兔嘲媒創意行銷</h3>
+                    <p>商業設計｜影音攝錄｜AI程式</p>
+                    <p>想讓您的品牌在競爭激烈的市場中脫穎而出嗎？我們是您的最佳選擇！我們結合數據分析、創意影音製作與精準的策略規劃，為您的品牌量身打造最有效的行銷方案。過去，我們成功協助多家客戶提升品牌知名度，增加產品銷售量。現在，就讓我們用數據說話，為您的品牌創造非凡的價值！</p>
+                </div>
+                <!-- 右側圖示區域 -->
+                <div class="about-icons">
+                    <div class="icon-box">
+                        <div class="icon"><img src="path/to/check-icon.png" alt="Check Icon"></div>
+                        <h4>數據變現</h4>
+                        <p>不再做無效廣告投放。找到關鍵精準客群，打造目標客戶喜好的內容，針對企業期望目標制定明確的執行方案，讓數據成功變現。</p>
+                    </div>
+                    <div class="icon-box">
+                        <div class="icon"><img src="path/to/check-icon.png" alt="Check Icon"></div>
+                        <h4>商模價值</h4>
+                        <p>商業模式為企業根本。協助企業分析自身優勢，制定清晰的商業模式，找到市場中生存之道。</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
