--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
             <hr>
             <ul>
-                <li><a href="#" >關於我們</a></li>
+                <li><a href="#about" >關於我們</a></li>
                 <li><a href="#services" >服務項目</a></li>
                 <li><a href="#pricing" >收費標準</a></li>
                 <li><a href="#portfolio" >成功案例</a></li>
