--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
             </div>
             <hr>
             <ul>
-                <li><a href="#about" >關於我們</a></li>
-                <li><a href="#services" >服務項目</a></li>
-                <li><a href="#pricing" >收費標準</a></li>
-                <li><a href="#portfolio" >成功案例</a></li>
-                <li><a href="#contact" >聯絡我們</a></li>
+                <li><a href="#about">關於我們</a></li>
+                <li><a href="#services">服務項目</a></li>
+                <li><a href="#pricing">收費標準</a></li>
+                <li><a href="#portfolio">成功案例</a></li>
+                <li><a href="#contact">聯絡我們</a></li>
             </ul>
         </nav>
     </header>
@@ -106,7 +106,8 @@
                 <div class="about-intro">
                     <h3>兔嘲媒創意行銷</h3>
                     <p>商業設計｜影音攝錄｜AI程式</p>
-                    <p>想讓您的品牌在競爭激烈的市場中脫穎而出嗎？我們是您的最佳選擇！我們結合數據分析、創意影音製作與精準的策略規劃，為您的品牌量身打造最有效的行銷方案。過去，我們成功協助多家客戶提升品牌知名度，增加產品銷售量。現在，就讓我們用數據說話，為您的品牌創造非凡的價值！</p>
+                    <p>想讓您的品牌在競爭激烈的市場中脫穎而出嗎？我們是您的最佳選擇！我們結合數據分析、創意影音製作與精準的策略規劃，為您的品牌量身打造最有效的行銷方案。過去，我們成功協助多家客戶提升品牌知名度，增加產品銷售量。現在，就讓我們用數據說話，為您的品牌創造非凡的價值！
+                    </p>
                 </div>
                 <!-- 右側圖示區域 -->
                 <div class="about-icons">
@@ -128,18 +129,32 @@
     <!-- Our Services區域 -->
     <section id="services" class="services-section">
         <div class="container">
-            <h2 class="section-title" data-aos="fade-up">我們的服務</h2>
-            <div class="service" data-aos="fade-right">
-                <h3>商業設計</h3>
-                <p>專注於核心定位與CIS系統，幫助企業建立清晰的品牌形象，進行視覺升級。</p>
-            </div>
-            <div class="service" data-aos="fade-left">
-                <h3>影音攝錄</h3>
-                <p>針對企業形象、個人IP等，透過視覺傳達核心信息，提升客戶認知。</p>
-            </div>
-            <div class="service" data-aos="fade-right">
-                <h3>AI程式</h3>
-                <p>透過數據分析了解市場與客戶需求，協助企業制定精確行銷策略。</p>
+            <h2 class="section-title">我們的服務</h2>
+            <div class="service-items">
+                <!-- 商業設計 -->
+                <div class="service-item">
+                    <div class="icon-container">
+                        <img src="path/to/business-icon.png" alt="商業設計圖標">
+                    </div>
+                    <h3>商業設計</h3>
+                    <p>核心定位、CIS打造，讓企業主清楚了解企業樣貌，有感視覺大升級。</p>
+                </div>
+                <!-- 影音攝錄 -->
+                <div class="service-item">
+                    <div class="icon-container">
+                        <img src="path/to/media-icon.png" alt="影音攝錄圖標">
+                    </div>
+                    <h3>影音攝錄</h3>
+                    <p>企業形象、個人IP、短影音的時代，說清楚講明白，客人自然來，關鍵訊息傳遞，精準有效觸及。</p>
+                </div>
+                <!-- AI程式 -->
+                <div class="service-item">
+                    <div class="icon-container">
+                        <img src="path/to/ai-icon.png" alt="AI程式圖標">
+                    </div>
+                    <h3>AI程式</h3>
+                    <p>AI時代，數據轉換為財富，多樣本分析，讓你了解客人思維，讓你看清市場脈絡。</p>
+                </div>
             </div>
         </div>
     </section>
