--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 <!-- 商業設計 -->
                 <div class="service-item">
                     <div class="icon-container">
-                        <img src="path/to/business-icon.png" alt="商業設計圖標">
+                        <img src="./img/design.png" alt="商業設計圖標">
                     </div>
                     <h3>商業設計</h3>
                     <p>核心定位、CIS打造，讓企業主清楚了解企業樣貌，有感視覺大升級。</p>
@@ -142,7 +142,7 @@
                 <!-- 影音攝錄 -->
                 <div class="service-item">
                     <div class="icon-container">
-                        <img src="path/to/media-icon.png" alt="影音攝錄圖標">
+                        <img src="./img/photography.png" alt="影音攝錄圖標">
                     </div>
                     <h3>影音攝錄</h3>
                     <p>企業形象、個人IP、短影音的時代，說清楚講明白，客人自然來，關鍵訊息傳遞，精準有效觸及。</p>
@@ -150,7 +150,7 @@
                 <!-- AI程式 -->
                 <div class="service-item">
                     <div class="icon-container">
-                        <img src="path/to/ai-icon.png" alt="AI程式圖標">
+                        <img src="./img/AI.png" alt="AI程式圖標">
                     </div>
                     <h3>AI程式</h3>
                     <p>AI時代，數據轉換為財富，多樣本分析，讓你了解客人思維，讓你看清市場脈絡。</p>
