--- a/index.html
+++ b/index.html
@@ -112,12 +112,12 @@
                 <!-- 右側圖示區域 -->
                 <div class="about-icons">
                     <div class="icon-box">
-                        <div class="icon"><img src="path/to/check-icon.png" alt="Check Icon"></div>
+                        <div class="icon"><img src="./img/check.png" alt="Check Icon"></div>
                         <h4>數據變現</h4>
                         <p>不再做無效廣告投放。找到關鍵精準客群，打造目標客戶喜好的內容，針對企業期望目標制定明確的執行方案，讓數據成功變現。</p>
                     </div>
                     <div class="icon-box">
-                        <div class="icon"><img src="path/to/check-icon.png" alt="Check Icon"></div>
+                        <div class="icon"><img src="./img/check.png" alt="Check Icon"></div>
                         <h4>商模價值</h4>
                         <p>商業模式為企業根本。協助企業分析自身優勢，制定清晰的商業模式，找到市場中生存之道。</p>
                     </div>
@@ -158,6 +158,64 @@
             </div>
         </div>
     </section>
+
+    <!-- Process Section區域 -->
+    <section id="process" class="process-section">
+        <div class="container">
+            <h2 class="section-title">服務流程</h2>
+            <div class="process-steps">
+                <!-- 步驟 1 -->
+                <div class="step">
+                    <div class="circle">01</div>
+                    <div class="step-content">
+                        <h3>聆聽紀錄</h3>
+                        <p>一場輕鬆的會談，了解行業目前面臨的問題點。</p>
+                    </div>
+                </div>
+                <!-- 步驟 2 -->
+                <div class="step">
+                    <div class="circle">02</div>
+                    <div class="step-content">
+                        <h3>梳理問題</h3>
+                        <p>分析與整理，產生條列式會談紀錄，再次確認問題點。</p>
+                    </div>
+                </div>
+                <!-- 步驟 3 -->
+                <div class="step">
+                    <div class="circle highlight">03</div>
+                    <div class="step-content">
+                        <h3>策略先行</h3>
+                        <p>提供明確的解決方式，大數據分析方案結果，做最有效的執行改善作業提案。</p>
+                    </div>
+                </div>
+                <!-- 步驟 4 -->
+                <div class="step">
+                    <div class="circle">04</div>
+                    <div class="step-content">
+                        <h3>顧問陪跑</h3>
+                        <p>依照策略方式，輔助業主訓練相關部門或人員，達成策略目的。</p>
+                    </div>
+                </div>
+                <!-- 步驟 5 -->
+                <div class="step">
+                    <div class="circle">05</div>
+                    <div class="step-content">
+                        <h3>代理操作</h3>
+                        <p>業主也可以選擇由公司代操策略內容，將其訓練過程省略，更快速地讓策略結果呈現。</p>
+                    </div>
+                </div>
+                <!-- 步驟 6 -->
+                <div class="step">
+                    <div class="circle">06</div>
+                    <div class="step-content">
+                        <h3>永續合作</h3>
+                        <p>兔嘲媒作為專業的策略行銷公司，不斷的與時俱進，使用有效的創意策略，輔助業主前行。</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    
 
     <!-- Pricing區域 -->
     <section id="pricing" class="pricing-section">
