--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                 </div>
                 <!-- 步驟 3 -->
                 <div class="step">
-                    <div class="circle highlight">03</div>
+                    <div class="circle">03</div>
                     <div class="step-content">
                         <h3>策略先行</h3>
                         <p>提供明確的解決方式，大數據分析方案結果，做最有效的執行改善作業提案。</p>
