--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
             <div class="slide" id="megaphone">
                 <img src="./img/Megaphone.png" alt="發表需求">
-                <p>發表需求</p>
+                <p>提案方法</p>
             </div>
             <div class="slide" id="discussion1">
                 <img src="./img/Discussion_one.png" alt="討論">
@@ -91,8 +91,8 @@
         </div>
 
         <div class="hero-content">
-            <h1>讓品牌脫穎而出，在市場中更具競爭力！</h1>
-            <p>結合數據分析、創意影音與精準策略，為您打造最有效的行銷方案。</p>
+            <h1>讓您的品牌引起共鳴，與顧客心靈相連！</h1>
+            <p>透過精準的數據分析與富有創意的故事，幫助您打動人心，提升品牌競爭力，打造持久的品牌印象。</p>
             <a href="#services" class="btn btn-primary">了解更多</a>
         </div>
     </section>
