--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             <ul>
                 <li><a href="#about">關於我們</a></li>
                 <li><a href="#services">服務項目</a></li>
+                <li><a href="#process">服務流程</a></li>
                 <li><a href="#pricing">收費標準</a></li>
                 <li><a href="#portfolio">成功案例</a></li>
                 <li><a href="#contact">聯絡我們</a></li>
@@ -53,20 +54,20 @@
         <!-- 動畫 -->
         <div class="animation-container">
             <div class="slide" id="challenge1">
-                <img src="./img/Challenges_one.png" alt="遇到困難">
-                <p>遇到困難</p>
+                <img src="./img/Challenges_one.png" alt="了解痛點">
+                <p>了解痛點</p>
             </div>
             <div class="slide" id="challenge2">
-                <img src="./img/Challenges_two.png" alt="內心掙扎">
-                <p>內心掙扎</p>
+                <img src="./img/Challenges_two.png" alt="規劃方案">
+                <p>規劃方案</p>
             </div>
             <div class="slide" id="megaphone">
-                <img src="./img/Megaphone.png" alt="發表需求">
+                <img src="./img/Megaphone.png" alt="提案方法">
                 <p>提案方法</p>
             </div>
             <div class="slide" id="discussion1">
-                <img src="./img/Discussion_one.png" alt="討論">
-                <p>討論</p>
+                <img src="./img/Discussion_one.png" alt="討論執行">
+                <p>討論執行</p>
             </div>
             <div class="slide" id="discussion2">
                 <img src="./img/Discussion_two.png" alt="協作">
@@ -263,8 +264,9 @@
             <h2 class="section-title" data-aos="fade-up">聯絡我們</h2>
             <form class="contact-form" action="your_backend_endpoint" method="post">
                 <input type="text" name="name" placeholder="姓名" required>
-                <input type="email" name="email" placeholder="電子郵件" required>
-                <textarea name="message" placeholder="需求描述" required></textarea>
+                <input type="number" name="phone" placeholder="電話" required>
+                <input type="email" name="email" placeholder="電子郵件">
+                <textarea name="message" placeholder="想說的話" required></textarea>
                 <button type="submit" class="btn btn-primary">提交</button>
             </form>
         </div>
