--- a/index.html
+++ b/index.html
@@ -39,9 +39,7 @@
             </div>
             <hr>
             <ul>
-                <li><a href="#about">關於我們</a></li>
-                <li><a href="#services">服務項目</a></li>
-                <li><a href="#process">服務流程</a></li>
+                <li><a href="#about">服務項目</a></li>
                 <li><a href="#pricing">收費標準</a></li>
                 <li><a href="#portfolio">成功案例</a></li>
                 <li><a href="#contact">聯絡我們</a></li>
@@ -98,10 +96,55 @@
         </div>
     </section>
 
+    <!-- About Us Section (區域) -->
+    <section id="about-us" class="about-us-section">
+        <div class="container">
+            <h2 class="section-title">我們的團隊</h2>
+            <div class="team-members">
+                <!-- Team Member 1 -->
+                <div class="team-member">
+                    <div class="member-image">
+                        <img src="./img/member1.png" alt="K.S.">
+                    </div>
+                    <h3>K.S.</h3>
+                    <p>笑顔が絶えない「ラージック」チームの一員として 身為笑容永不止息的「Ragic」團隊的一員</p>
+                    <span class="member-role">開発エンジニア</span>
+                    <span class="location">名古屋</span>
+                </div>
+                <!-- Team Member 2 -->
+                <div class="team-member">
+                    <div class="member-image">
+                        <img src="./img/member2.png" alt="Y.E.">
+                    </div>
+                    <h3>Y.E. 葉</h3>
+                    <p>お互いに刺激しあい、成長できる環境が整っている 我們提供一個可以互相激勵和成長的環境。</p>
+                    <span class="member-role">インフラエンジニア</span>
+                    <span class="location">豊田</span>
+                </div>
+                <!-- Team Member 3 -->
+                <div class="team-member">
+                    <div class="member-image">
+                        <img src="./img/member3.png" alt="A.Y.">
+                    </div>
+                    <h3>A.Y.</h3>
+                    <p>仕事もプライベートも充実、毎日がチャレンジ！ 工作和私人生活都很充實，每一天都是挑戰！</p>
+                    <span class="member-role">組込エンジニア</span>
+                    <span class="location">名古屋・刈谷</span>
+                </div>
+            </div>
+
+            <!-- Button to open new page with more members -->
+            <div class="more-members">
+                <a href="team.html" target="_blank" class="btn btn-secondary">查看更多成員</a>
+            </div>
+        </div>
+    </section>
+
+
     <!-- About Section區域 -->
     <section id="about" class="about-section">
         <div class="container">
-            <h2 class="section-title">關於我們</h2>
+            <h2 class="section-title">關於兔嘲媒</h2>
             <div class="about-content">
                 <!-- 左側介紹區域 -->
                 <div class="about-intro">
@@ -125,98 +168,98 @@
                 </div>
             </div>
         </div>
-    </section>
 
-    <!-- Our Services區域 -->
-    <section id="services" class="services-section">
-        <div class="container">
-            <h2 class="section-title">我們的服務</h2>
-            <div class="service-items">
-                <!-- 商業設計 -->
-                <div class="service-item">
-                    <div class="icon-container">
-                        <img src="./img/design.png" alt="商業設計圖標">
-                    </div>
-                    <h3>商業設計</h3>
-                    <p>核心定位、CIS打造，讓企業主清楚了解企業樣貌，有感視覺大升級。</p>
-                </div>
-                <!-- 影音攝錄 -->
-                <div class="service-item">
-                    <div class="icon-container">
-                        <img src="./img/photography.png" alt="影音攝錄圖標">
-                    </div>
-                    <h3>影音攝錄</h3>
-                    <p>企業形象、個人IP、短影音的時代，說清楚講明白，客人自然來，關鍵訊息傳遞，精準有效觸及。</p>
-                </div>
-                <!-- AI程式 -->
-                <div class="service-item">
-                    <div class="icon-container">
-                        <img src="./img/AI.png" alt="AI程式圖標">
-                    </div>
-                    <h3>AI程式</h3>
-                    <p>AI時代，數據轉換為財富，多樣本分析，讓你了解客人思維，讓你看清市場脈絡。</p>
-                </div>
-            </div>
-        </div>
-    </section>
 
-    <!-- Process Section區域 -->
-    <section id="process" class="process-section">
-        <div class="container">
-            <h2 class="section-title">服務流程</h2>
-            <div class="process-steps">
-                <!-- 步驟 1 -->
-                <div class="step">
-                    <div class="circle">01</div>
-                    <div class="step-content">
-                        <h3>聆聽紀錄</h3>
-                        <p>一場輕鬆的會談，了解行業目前面臨的問題點。</p>
+        <!-- Our Services區域 -->
+        <section id="services" class="services-section">
+            <div class="container">
+                <h2 class="section-title">我們的服務</h2>
+                <div class="service-items">
+                    <!-- 商業設計 -->
+                    <div class="service-item">
+                        <div class="icon-container">
+                            <img src="./img/design.png" alt="商業設計圖標">
+                        </div>
+                        <h3>商業設計</h3>
+                        <p>核心定位、CIS打造，讓企業主清楚了解企業樣貌，有感視覺大升級。</p>
                     </div>
-                </div>
-                <!-- 步驟 2 -->
-                <div class="step">
-                    <div class="circle">02</div>
-                    <div class="step-content">
-                        <h3>梳理問題</h3>
-                        <p>分析與整理，產生條列式會談紀錄，再次確認問題點。</p>
+                    <!-- 影音攝錄 -->
+                    <div class="service-item">
+                        <div class="icon-container">
+                            <img src="./img/photography.png" alt="影音攝錄圖標">
+                        </div>
+                        <h3>影音攝錄</h3>
+                        <p>企業形象、個人IP、短影音的時代，說清楚講明白，客人自然來，關鍵訊息傳遞，精準有效觸及。</p>
                     </div>
-                </div>
-                <!-- 步驟 3 -->
-                <div class="step">
-                    <div class="circle">03</div>
-                    <div class="step-content">
-                        <h3>策略先行</h3>
-                        <p>提供明確的解決方式，大數據分析方案結果，做最有效的執行改善作業提案。</p>
-                    </div>
-                </div>
-                <!-- 步驟 4 -->
-                <div class="step">
-                    <div class="circle">04</div>
-                    <div class="step-content">
-                        <h3>顧問陪跑</h3>
-                        <p>依照策略方式，輔助業主訓練相關部門或人員，達成策略目的。</p>
-                    </div>
-                </div>
-                <!-- 步驟 5 -->
-                <div class="step">
-                    <div class="circle">05</div>
-                    <div class="step-content">
-                        <h3>代理操作</h3>
-                        <p>業主也可以選擇由公司代操策略內容，將其訓練過程省略，更快速地讓策略結果呈現。</p>
-                    </div>
-                </div>
-                <!-- 步驟 6 -->
-                <div class="step">
-                    <div class="circle">06</div>
-                    <div class="step-content">
-                        <h3>永續合作</h3>
-                        <p>兔嘲媒作為專業的策略行銷公司，不斷的與時俱進，使用有效的創意策略，輔助業主前行。</p>
+                    <!-- AI程式 -->
+                    <div class="service-item">
+                        <div class="icon-container">
+                            <img src="./img/AI.png" alt="AI程式圖標">
+                        </div>
+                        <h3>AI程式</h3>
+                        <p>AI時代，數據轉換為財富，多樣本分析，讓你了解客人思維，讓你看清市場脈絡。</p>
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
+
+        <!-- Process Section區域 -->
+        <section id="process" class="process-section">
+            <div class="container">
+                <h2 class="section-title">服務流程</h2>
+                <div class="process-steps">
+                    <!-- 步驟 1 -->
+                    <div class="step">
+                        <div class="circle">01</div>
+                        <div class="step-content">
+                            <h3>聆聽紀錄</h3>
+                            <p>一場輕鬆的會談，了解行業目前面臨的問題點。</p>
+                        </div>
+                    </div>
+                    <!-- 步驟 2 -->
+                    <div class="step">
+                        <div class="circle">02</div>
+                        <div class="step-content">
+                            <h3>梳理問題</h3>
+                            <p>分析與整理，產生條列式會談紀錄，再次確認問題點。</p>
+                        </div>
+                    </div>
+                    <!-- 步驟 3 -->
+                    <div class="step">
+                        <div class="circle">03</div>
+                        <div class="step-content">
+                            <h3>策略先行</h3>
+                            <p>提供明確的解決方式，大數據分析方案結果，做最有效的執行改善作業提案。</p>
+                        </div>
+                    </div>
+                    <!-- 步驟 4 -->
+                    <div class="step">
+                        <div class="circle">04</div>
+                        <div class="step-content">
+                            <h3>顧問陪跑</h3>
+                            <p>依照策略方式，輔助業主訓練相關部門或人員，達成策略目的。</p>
+                        </div>
+                    </div>
+                    <!-- 步驟 5 -->
+                    <div class="step">
+                        <div class="circle">05</div>
+                        <div class="step-content">
+                            <h3>代理操作</h3>
+                            <p>業主也可以選擇由公司代操策略內容，將其訓練過程省略，更快速地讓策略結果呈現。</p>
+                        </div>
+                    </div>
+                    <!-- 步驟 6 -->
+                    <div class="step">
+                        <div class="circle">06</div>
+                        <div class="step-content">
+                            <h3>永續合作</h3>
+                            <p>兔嘲媒作為專業的策略行銷公司，不斷的與時俱進，使用有效的創意策略，輔助業主前行。</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </section>
-    
 
     <!-- Pricing區域 -->
     <section id="pricing" class="pricing-section">
@@ -275,7 +318,7 @@
     <!-- 頁尾 -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 兔嘲媒. All Rights Reserved.</p>
+            <p>&copy; 2024 兔嘲媒體整合行銷. All Rights Reserved.</p>
             <ul class="footer-links">
                 <li><a href="#services">服務</a></li>
                 <li><a href="#portfolio">案例</a></li>
