--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <ul>
                 <li><a href="#about">服務項目</a></li>
                 <li><a href="#pricing">收費標準</a></li>
-                <li><a href="#portfolio">成功案例</a></li>
+                <li><a href="#portfolio">過往案例</a></li>
                 <li><a href="#contact">聯絡我們</a></li>
             </ul>
         </nav>
@@ -92,51 +92,6 @@
         <div class="hero-content">
             <h1>讓您的品牌引起共鳴，與顧客心靈相連！</h1>
             <p>透過精準的數據分析與富有創意的故事，幫助您打動人心，提升品牌競爭力，打造持久的品牌印象。</p>
-            <a href="#services" class="btn btn-primary">了解更多</a>
-        </div>
-    </section>
-
-    <!-- About Us Section (區域) -->
-    <section id="about-us" class="about-us-section">
-        <div class="container">
-            <h2 class="section-title">我們的團隊</h2>
-            <div class="team-members">
-                <!-- Team Member 1 -->
-                <div class="team-member">
-                    <div class="member-image">
-                        <img src="./img/member1.png" alt="K.S.">
-                    </div>
-                    <h3>K.S.</h3>
-                    <p>笑顔が絶えない「ラージック」チームの一員として 身為笑容永不止息的「Ragic」團隊的一員</p>
-                    <span class="member-role">開発エンジニア</span>
-                    <span class="location">名古屋</span>
-                </div>
-                <!-- Team Member 2 -->
-                <div class="team-member">
-                    <div class="member-image">
-                        <img src="./img/member2.png" alt="Y.E.">
-                    </div>
-                    <h3>Y.E. 葉</h3>
-                    <p>お互いに刺激しあい、成長できる環境が整っている 我們提供一個可以互相激勵和成長的環境。</p>
-                    <span class="member-role">インフラエンジニア</span>
-                    <span class="location">豊田</span>
-                </div>
-                <!-- Team Member 3 -->
-                <div class="team-member">
-                    <div class="member-image">
-                        <img src="./img/member3.png" alt="A.Y.">
-                    </div>
-                    <h3>A.Y.</h3>
-                    <p>仕事もプライベートも充実、毎日がチャレンジ！ 工作和私人生活都很充實，每一天都是挑戰！</p>
-                    <span class="member-role">組込エンジニア</span>
-                    <span class="location">名古屋・刈谷</span>
-                </div>
-            </div>
-
-            <!-- Button to open new page with more members -->
-            <div class="more-members">
-                <a href="team.html" target="_blank" class="btn btn-secondary">查看更多成員</a>
-            </div>
         </div>
     </section>
 
@@ -148,7 +103,7 @@
             <div class="about-content">
                 <!-- 左側介紹區域 -->
                 <div class="about-intro">
-                    <h3>兔嘲媒創意行銷</h3>
+                    <h3>兔嘲媒體整合行銷</h3>
                     <p>商業設計｜影音攝錄｜AI程式</p>
                     <p>想讓您的品牌在競爭激烈的市場中脫穎而出嗎？我們是您的最佳選擇！我們結合數據分析、創意影音製作與精準的策略規劃，為您的品牌量身打造最有效的行銷方案。過去，我們成功協助多家客戶提升品牌知名度，增加產品銷售量。現在，就讓我們用數據說話，為您的品牌創造非凡的價值！
                     </p>
@@ -169,6 +124,47 @@
             </div>
         </div>
 
+        <!-- About Us Section (區域) -->
+        <!-- About Us Section (Our Team) -->
+        <section id="about-us" class="about-us-section">
+            <div class="container">
+                <h2 class="section-title">我們的團隊</h2>
+                <div class="team-members">
+                    <!-- Team Member 1 -->
+                    <div class="team-member">
+                        <div class="member-image">
+                            <img src="./img/meida.jpg" alt="K.S.">
+                        </div>
+                        <h3>郭美汶</h3>
+                        <p>作為一位富有遠見的執行長，不僅在企業管理上擁有豐富經驗，更精通攝影與社群行銷。</p>
+                        <span class="member-role">執行長</span>
+                    </div>
+                    <!-- Team Member 2 -->
+                    <div class="team-member">
+                        <div class="member-image">
+                            <img src="./img/tang.jpg" alt="Y.E.">
+                        </div>
+                        <h3>唐念平</h3>
+                        <p>身為營運長，擁有深厚的品牌設計專業，並精通企劃書的執行與製作。</p>
+                        <span class="member-role">營運長</span>
+                    </div>
+                    <!-- Team Member 3 -->
+                    <div class="team-member">
+                        <div class="member-image">
+                            <img src="./img/jun.jpg" alt="A.Y.">
+                        </div>
+                        <h3>廖彥鈞</h3>
+                        <p>作為資訊長，在AI應用及網站和遊戲的程式優化領域擁有豐富經驗。</p>
+                        <span class="member-role">資訊長</span>
+                    </div>
+                </div>
+
+                <!-- Show More Button -->
+                <div class="show-more">
+                    <a href="team.html" target="_blank" class="btn btn-secondary">查看更多成員</a>
+                </div>
+            </div>
+        </section>
 
         <!-- Our Services區域 -->
         <section id="services" class="services-section">
