--- a/index.html
+++ b/index.html
@@ -261,15 +261,11 @@
     <!-- Portfolio區域 -->
     <section id="portfolio" class="portfolio-section">
         <div class="container">
-            <h2 class="section-title" data-aos="fade-up">成功案例</h2>
+            <h2 class="section-title" data-aos="fade-up">過往案例</h2>
             <div class="portfolio-carousel">
                 <div class="portfolio-item" data-aos="fade-right">
                     <img src="./img/case1.png" alt="案例1">
-                    <p>品牌知名度提升案例</p>
-                </div>
-                <div class="portfolio-item" data-aos="fade-left">
-                    <img src="./img/case2.png" alt="案例2">
-                    <p>市場滲透率提升案例</p>
+                    <p>過往案例展示</p>
                 </div>
                 <!-- 更多案例 -->
             </div>
