--- a/team.html
+++ b/team.html
@@ -13,11 +13,11 @@
         <h1>我們的團隊</h1>
     </header>
 
-    <section class="team-section">
+    <section id="about-us" class="about-us-section">
         <div class="container">
-            <h2 class="section-title">團隊成員</h2>
+            <h2 class="section-title">我們的團隊</h2>
             <div class="team-members">
-                <!-- Repeat team member blocks as needed for more members -->
+                <!-- Team Member 1 -->
                 <div class="team-member">
                     <div class="member-image">
                         <img src="./img/meida.jpg" alt="K.S.">
@@ -44,7 +44,6 @@
                     <p>作為資訊長，在AI應用及網站和遊戲的程式優化領域擁有豐富經驗。</p>
                     <span class="member-role">資訊長</span>
                 </div>
-                <!-- Additional members -->
             </div>
         </div>
     </section>
