--- a/index.html
+++ b/index.html
@@ -202,9 +202,9 @@
         <section id="process" class="process-section">
             <div class="container">
                 <h2 class="section-title">服務流程</h2>
-                <div class="process-steps">
+                <div class="process-circle">
                     <!-- 步驟 1 -->
-                    <div class="step">
+                    <div class="step step-1">
                         <div class="circle">01</div>
                         <div class="step-content">
                             <h3>聆聽紀錄</h3>
@@ -212,7 +212,7 @@
                         </div>
                     </div>
                     <!-- 步驟 2 -->
-                    <div class="step">
+                    <div class="step step-2">
                         <div class="circle">02</div>
                         <div class="step-content">
                             <h3>梳理問題</h3>
@@ -220,7 +220,7 @@
                         </div>
                     </div>
                     <!-- 步驟 3 -->
-                    <div class="step">
+                    <div class="step step-3 highlight">
                         <div class="circle">03</div>
                         <div class="step-content">
                             <h3>策略先行</h3>
@@ -228,7 +228,7 @@
                         </div>
                     </div>
                     <!-- 步驟 4 -->
-                    <div class="step">
+                    <div class="step step-4">
                         <div class="circle">04</div>
                         <div class="step-content">
                             <h3>顧問陪跑</h3>
@@ -236,7 +236,7 @@
                         </div>
                     </div>
                     <!-- 步驟 5 -->
-                    <div class="step">
+                    <div class="step step-5">
                         <div class="circle">05</div>
                         <div class="step-content">
                             <h3>代理操作</h3>
@@ -244,7 +244,7 @@
                         </div>
                     </div>
                     <!-- 步驟 6 -->
-                    <div class="step">
+                    <div class="step step-6">
                         <div class="circle">06</div>
                         <div class="step-content">
                             <h3>永續合作</h3>
@@ -254,8 +254,7 @@
                 </div>
             </div>
         </section>
-    </section>
-
+        
 
     <!-- Portfolio區域 -->
     <section id="portfolio" class="portfolio-section">
@@ -264,7 +263,6 @@
             <div class="portfolio-carousel">
                 <div class="portfolio-item" data-aos="fade-right">
                     <img src="./img/case1.png" alt="案例1">
-                    <p>過往案例展示</p>
                 </div>
                 <!-- 更多案例 -->
             </div>
