--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                 <div class="process-circle">
                     <!-- 步驟 1 -->
                     <div class="step step-1">
-                        <div class="circle">01</div>
+                        <div class="circle red">01</div>
                         <div class="step-content">
                             <h3>聆聽紀錄</h3>
                             <p>一場輕鬆的會談，了解行業目前面臨的問題點。</p>
@@ -213,15 +213,15 @@
                     </div>
                     <!-- 步驟 2 -->
                     <div class="step step-2">
-                        <div class="circle">02</div>
+                        <div class="circle black">02</div>
                         <div class="step-content">
                             <h3>梳理問題</h3>
                             <p>分析與整理，產生條列式會談紀錄，再次確認問題點。</p>
                         </div>
                     </div>
                     <!-- 步驟 3 -->
-                    <div class="step step-3 highlight">
-                        <div class="circle">03</div>
+                    <div class="step step-3">
+                        <div class="circle gray">03</div>
                         <div class="step-content">
                             <h3>策略先行</h3>
                             <p>提供明確的解決方式，大數據分析方案結果，做最有效的執行改善作業提案。</p>
@@ -229,7 +229,7 @@
                     </div>
                     <!-- 步驟 4 -->
                     <div class="step step-4">
-                        <div class="circle">04</div>
+                        <div class="circle black">04</div>
                         <div class="step-content">
                             <h3>顧問陪跑</h3>
                             <p>依照策略方式，輔助業主訓練相關部門或人員，達成策略目的。</p>
@@ -237,7 +237,7 @@
                     </div>
                     <!-- 步驟 5 -->
                     <div class="step step-5">
-                        <div class="circle">05</div>
+                        <div class="circle black">05</div>
                         <div class="step-content">
                             <h3>代理操作</h3>
                             <p>業主也可以選擇由公司代操策略內容，將其訓練過程省略，更快速地讓策略結果呈現。</p>
@@ -245,7 +245,7 @@
                     </div>
                     <!-- 步驟 6 -->
                     <div class="step step-6">
-                        <div class="circle">06</div>
+                        <div class="circle black">06</div>
                         <div class="step-content">
                             <h3>永續合作</h3>
                             <p>兔嘲媒作為專業的策略行銷公司，不斷的與時俱進，使用有效的創意策略，輔助業主前行。</p>
@@ -254,7 +254,7 @@
                 </div>
             </div>
         </section>
-        
+                
 
     <!-- Portfolio區域 -->
     <section id="portfolio" class="portfolio-section">
